--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -73,11 +73,16 @@
 			<id>pyr-snapshots</id>
 			<url>https://repo.pyr.lol/snapshots</url>
 		</repository>
+        <repository>
+            <id>fancyplugins-releases</id>
+            <name>FancyPlugins Repository</name>
+            <url>https://repo.fancyplugins.de/releases</url>
+        </repository>
 	</repositories>
 
 	<dependencies>
 		<dependency>
-			<groupId>fr.skytasul</groupId>				
+			<groupId>fr.skytasul</groupId>
 			<artifactId>beautyquests-api</artifactId>
 			<version>${revision}</version>
 			<scope>provided</scope>
@@ -110,12 +115,18 @@
 			<version>2.7.3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>io.github.gonalez</groupId>
-			<artifactId>znpcs</artifactId>
-			<version>4.2</version>
-			<scope>provided</scope>
-		</dependency>
+        <dependency>
+            <groupId>de.oliver</groupId>
+            <artifactId>FancyNpcs</artifactId>
+            <version>2.2.0</version>
+            <scope>provided</scope>
+        </dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.github.gonalez</groupId>-->
+<!--			<artifactId>znpcs</artifactId>-->
+<!--			<version>4.2</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>com.github.Pyrbu</groupId>
 			<artifactId>ZNPCsPlus</artifactId>
@@ -232,77 +243,77 @@
 		</dependency>
 
 		<!-- Local JARs -->
-		<dependency>
-			<groupId>org.mineacademy</groupId>
-			<artifactId>boss</artifactId>
-			<version>4.2.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.craftaro</groupId>
-			<artifactId>UltimateTimber</artifactId>
-			<version>3.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.dynmap</groupId>
-			<artifactId>dynmap</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.massivecraft</groupId>
-			<artifactId>factions</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.massivecraft</groupId>
-			<artifactId>massivecore</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.gamingmesh</groupId>
-			<artifactId>jobs</artifactId>
-			<version>5.1.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.gmail.mrphpfan</groupId>
-			<artifactId>mccombatlevel</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.gmail.nossr50</groupId>
-			<artifactId>mcmmo</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.suxy</groupId>
-			<artifactId>skillapi</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.zrips</groupId>
-			<artifactId>cmi</artifactId>
-			<version>9.0.2.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.zrips</groupId>
-			<artifactId>cmilib</artifactId>
-			<version>1.2.3.3</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>gcspawners</groupId>
-			<artifactId>gcspawners</artifactId>
-			<version>3.3.0</version>
-			<scope>provided</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.mineacademy</groupId>-->
+<!--			<artifactId>boss</artifactId>-->
+<!--			<version>4.2.1</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.craftaro</groupId>-->
+<!--			<artifactId>UltimateTimber</artifactId>-->
+<!--			<version>3.0.1</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.dynmap</groupId>-->
+<!--			<artifactId>dynmap</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.massivecraft</groupId>-->
+<!--			<artifactId>factions</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.massivecraft</groupId>-->
+<!--			<artifactId>massivecore</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.gamingmesh</groupId>-->
+<!--			<artifactId>jobs</artifactId>-->
+<!--			<version>5.1.0.1</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.gmail.mrphpfan</groupId>-->
+<!--			<artifactId>mccombatlevel</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.gmail.nossr50</groupId>-->
+<!--			<artifactId>mcmmo</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.suxy</groupId>-->
+<!--			<artifactId>skillapi</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.zrips</groupId>-->
+<!--			<artifactId>cmi</artifactId>-->
+<!--			<version>9.0.2.1</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.zrips</groupId>-->
+<!--			<artifactId>cmilib</artifactId>-->
+<!--			<version>1.2.3.3</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>gcspawners</groupId>-->
+<!--			<artifactId>gcspawners</artifactId>-->
+<!--			<version>3.3.0</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
 	</dependencies>
 </project>
